String paths have been changed to File