@@ -1,5 +1,6 @@
 package loaders;
 
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -7,13 +8,13 @@ import java.util.Arrays;
 
 public class JarClassLoader extends URLClassLoader {
 
-    public JarClassLoader(String... paths) {
-        super(Arrays.stream(paths).map(JarClassLoader::convertPathToJarURL).toArray(URL[]::new));
+    public JarClassLoader(File... jars) {
+        super(Arrays.stream(jars).map(JarClassLoader::convertPathToJarURL).toArray(URL[]::new));
     }
 
-    private static URL convertPathToJarURL(String path) {
+    private static URL convertPathToJarURL(File jar) {
         try {
-            return new URL("jar", "", "file:" + path + "!/");
+            return new URL("jar", "", jar.toURI().toURL() + "!/");
         } catch (MalformedURLException exception) {
             throw new RuntimeException(exception);
         }
